--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div class="container">
+      <div class="box red"></div>
+      <div class="box orange"></div>
+      <div class="box yellow"></div>
+      <div class="box green"></div>
+      <div class="box light-blue"></div>
+      <div class="box blue"></div>
+      <div class="box purple"></div>
+    </div>
   </body>
 </html>
